# church

./: .gitignore  Cargo.toml  Justfile  README.md  TYPESYSTEM.md
.github/workflows/: test.yaml
ch/: i32.ch
src/: ast.rs  grammar.pest  main.rs  parser.rs  types.rs
src/wasm/: bin.rs  mod.rs
test/: test.js
wat/: const.wat
