[package]
name = "church-lang"
version = "0.1.1"
authors = ["Viktor A. Rozenko Voitenko <sharp.vik@gmail.com>"]
edition = "2021"
description = "Church compiler - simple, safe, and fast"
license = "MIT"
documentation = "https://github.com/prog-lang/church#readme"
homepage = "https://github.com/prog-lang/church#readme"
readme = "README.md"

[dependencies]
leb128 = "0.2.5"
pest = "2.0"
pest_derive = "2.0"
wasm-encoder = "0.24.1"
